# rag-chatbot

./: README.md  pyproject.toml
rag_chatbot/: document_loader.py  embedder.py  main.py  qa.py  test_build.py
vectorstore/: index.faiss  index.pkl
